🚀 v1.0.0 Official Release: Dashboard Time Periods, Category Fixes, and UI Polish

--- a/SmartSpend.xcodeproj/Localizable.strings
+++ b/SmartSpend.xcodeproj/Localizable.strings
@@ -240,3 +240,8 @@
 // MARK: - Notifications
 "notification_title" = "SmartSpend";
 "notification_body" = "Don't forget to track your expenses!";
+
+// MARK: - Support
+"support" = "Support";
+"ai_chat" = "AI Support Chat";
+"email_us" = "Email Support";
